--- a/v1/index.html
+++ b/v1/index.html
@@ -50,8 +50,8 @@
 				</ul>
 			</nav>
 			<div id="container-top">
-				<h1 style="font-size:150px;">vHack XT</h1><br />
-				<!-- <img id="logo" src="images/logo-main.png" alt="vHack XT - A Virtual Hacking Game for Android" /> -->
+				<!-- <h1 style="font-size:150px;">vHack XT</h1><br /> -->
+				<img id="logo" src="https://lh3.googleusercontent.com/WpfCrV9pxwXTe8WY4K47DhrDBI1E1JbZFiK3yz9KVUOWDv7yS8iNDmFQy-PdlQuHI8u8=w300" alt="vHack XT - A Virtual Hacking Game for Android" />
 				<div id="promo-box">
 					<h1>HACK OTHER PLAYERS' DEVICES &amp; UPGRADE YOURS IN THIS HIGHLY ORIGINAL HACKING GAME.</h1>
 				</div>
