--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-v1 -> <a href="./v1/">Click Here!</a><br/>
-v2 -> <a href="./v2/">Click Here!</a>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+		<title>vHack XT</title>
+	</head>
+	<body>
+		<p>
+			<ul>
+				<b>v1 - Responsive</b>
+				<li><i>Finished - <a href="./v1" target="_blank">Responsive</a></i></li>
+			</ul>
+			<ul>
+				<b>v2 - Basic</b>
+				<li><i>Finished - <a href="./v2" target="_blank">Basic</a></i></li>
+			</ul>
+		</p>
+	</body>
+</html>
